--- a/layui/css/component/button.css
+++ b/layui/css/component/button.css
@@ -1,9 +1,12 @@
 /*
-	作者: zzy
-	创建时间：
-	描述：按钮组件
+ *	作者: zzy
+ *	创建时间：
+ *	描述：按钮组件
  */
 
  @charset "utf-8";
 
- 
+button {
+	text-align: center;
+	letter-spacing: 4px;
+}
