--- a/layui-2.0/css/component/input.css
+++ b/layui-2.0/css/component/input.css
@@ -1,10 +1,11 @@
 /*
  *	作者: zw
  *	创建时间：
- *	描述：按钮组件
+ *	描述：文本域组件
  */
 
  @charset "utf-8";
+ /* 文本域1 */
  .layui-input{
      border-color:#C0C0C0;
  }
@@ -14,6 +15,7 @@
  .layui-input:hover, .layui-textarea:hover{
      border-color:#54ACF0 !important;
  }
+ /* 文本域2 */
  .input-first-container{
      position: relative;
  }
