--- a/layui-2.0/css/component/breadcrumb.css
+++ b/layui-2.0/css/component/breadcrumb.css
@@ -4,12 +4,25 @@
  *	描述：面包屑
  */
 .breadcrumb-container {
-    padding: 15px 12px;
+    padding: 20px 12px;
+    line-height: 0;
+    background-color: #fff;
+    position: relative;
+    top: -50px;
 }
+
 .layui-breadcrumb>* {
     font-size: 12px;
 }
 
+.layui-breadcrumb a:hover {
+    color: #5FB878 !important
+}
+
 .layui-breadcrumb a {
-    color: #333!important;
+    color: #333 !important;
+}
+
+.layui-breadcrumb a cite {
+    color: #333;
 }
