--- a/layui-2.0/css/public.css
+++ b/layui-2.0/css/public.css
@@ -10,23 +10,61 @@
  @import url('component/button.css');
  /* 选项卡 */
  @import url('component/tab.css');
-<<<<<<< HEAD
+ /* 文本域 */
+ @import url('component/input.css');
  /* 面包屑 */
  @import url('component/breadcrumb.css');
 
-=======
- /* 文本域 */
- @import url('component/input.css');
->>>>>>> 9592e2502d33fbf4e5e0f10017d86c89f6aaf065
 /*
  * 标签重定义
  */
+
+ html {
+	 background-color: rgb(237, 237, 237);
+ }
 
  iframe {
  	border: none;
  	padding: 0;
  	margin: 0;
  	width: 100%;
+ }
+
+ /* 主体内容 */
+ .layui-body {
+	 overflow-y: visible;
+ }
+ .layui-body, .layui-layout-admin .layui-footer {
+	 left: 210px;
+ }
+ .layui-layout-admin .layui-body {
+	 top: 100px;
+	 background-color: #fff;
+ }
+
+ /* 左侧导航 */
+ .layui-side-scroll {
+	 width: 200px;
+ }
+ .layui-bg-black {
+	 background-color: #262A35!important;
+ }
+ .layui-layout-admin .layui-side {
+	 top: 50px;
+ }
+
+ /* 头部导航 */
+ .layui-layout-admin .layui-header {
+	background-color: #262A35;
+ }
+ .layui-header {
+	 height: 50px;
+ }
+ .layui-nav .layui-nav-item {
+	 line-height: 50px;
+ }
+ .layui-nav-child {
+	 top: 55px;
  }
 
 
