--- a/layui-2.0/css/public.css
+++ b/layui-2.0/css/public.css
@@ -32,7 +32,7 @@
 
  /* 主体内容 */
  .layui-body {
-	 overflow-y: visible;
+	 overflow: visible;
  }
  .layui-body, .layui-layout-admin .layui-footer {
 	 left: 210px;
