--- a/layui-2.0/css/component/input.css
+++ b/layui-2.0/css/component/input.css
@@ -6,8 +6,9 @@
 
  @charset "utf-8";
  /* 文本域1 */
- .layui-input{
+ .layui-input,.layui-textarea{
      border-color:#C0C0C0;
+     border-radius: 4px;
  }
  .layui-input::placeholder{
      color: #999999;
@@ -16,13 +17,23 @@
      border-color:#54ACF0 !important;
  }
  /* 文本域2 */
- .input-first-container{
+ .input-second-container,.input-third-container{
      position: relative;
  }
- .input-first-container .input-number{
+ .input-second-container .input-number{
      position: absolute;
      right:10px;
      top: 50%;
      margin-top:-7px;
      color:#999999;
  }
+/* 文本域3 */
+.input-third-container .layui-input{
+    padding-left: 20px;
+}
+.input-third-container .input-before{
+    position: absolute;
+    left:5px;
+    top: 50%;
+    margin-top: -9px;
+}
