--- a/layui-2.0/css/public.css
+++ b/layui-2.0/css/public.css
@@ -16,6 +16,12 @@
 @import url('component/search.css');
 /* 面包屑 */
 @import url('component/breadcrumb.css');
+/* 下拉 */
+@import url('component/select.css');
+/* 法规 */
+@import url('component/rule.css');
+/* 图片比例 */
+@import url('component/pic.css');
 
 /*
  * 标签重定义
