--- a/layui-2.0/css/component/tab.css
+++ b/layui-2.0/css/component/tab.css
@@ -3,11 +3,12 @@
  *	创建时间：
  *	描述：选项卡
  */
- @charset "utf-8";
- /* 选项卡1 */
- .layui-tab-title {
-     height: 50px;
- }
+@charset "utf-8";
+
+/* 选项卡1 */
+.layui-tab-title {
+    height: 50px;
+}
 
 .layui-tab-title li {
     padding: 0;
@@ -20,42 +21,76 @@
     color: #F05654;
 }
 
-.layui-tab-brief>.layui-tab-more li.layui-this:after, .layui-tab-brief>.layui-tab-title .layui-this:after {
+.layui-tab-brief>.layui-tab-more li.layui-this:after,
+.layui-tab-brief>.layui-tab-title .layui-this:after {
     border-bottom: 1px #F05654 solid;
     height: 51px;
 }
 
-.layui-badge-rim, .layui-colla-content, .layui-colla-item, .layui-collapse, .layui-elem-field, .layui-form-pane .layui-form-item[pane], .layui-form-pane .layui-form-label, .layui-input, .layui-layedit, .layui-layedit-tool, .layui-quote-nm, .layui-select, .layui-tab-bar, .layui-tab-card, .layui-tab-title, .layui-tab-title .layui-this:after, .layui-textarea {
+.layui-badge-rim,
+.layui-colla-content,
+.layui-colla-item,
+.layui-collapse,
+.layui-elem-field,
+.layui-form-pane .layui-form-item[pane],
+.layui-form-pane .layui-form-label,
+.layui-input,
+.layui-layedit,
+.layui-layedit-tool,
+.layui-quote-nm,
+.layui-select,
+.layui-tab-bar,
+.layui-tab-card,
+.layui-tab-title,
+.layui-tab-title .layui-this:after,
+.layui-textarea {
     border-color: #EFEFEF;
 }
+
 /* 选项卡2 */
-.tab-second-container::after{
+.tab-second-container::after {
     content: '';
     display: block;
     width: 0;
     height: 0;
     clear: both;
 }
-.tab-second-container .tab-second-content{
+
+.tab-second-container .tab-second-content {
     float: left;
     color: #666666;
     box-sizing: border-box;
     min-width: 88px;
     text-align: center;
     line-height: 38px;
-    border:1px solid #C0C0C0;
-    /* border-width: 1px 0 1px 0; */
+    border: 1px solid #C0C0C0;
+    border-width: 1px 1px 1px 0;
     cursor: pointer;
+    background-color: #fff;
 }
-.tab-second-container .tab-second-content:first-child{
+
+.tab-second-container .tab-second-content:first-child,
+.tab-second-container .tab-second-content:first-child.active::after {
     border-radius: 4px 0 0 4px;
-    /* border-width: 1px; */
+    border-width: 1px 1px 1px 1px;
 }
-.tab-second-container .tab-second-content:last-child{
+
+.tab-second-container .tab-second-content:last-child,
+.tab-second-container .tab-second-content:last-child.active::after {
     border-radius: 0 4px 4px 0;
-    /* border-width: 1px; */
 }
-.tab-second-container .tab-second-content.active{
-    border-color:#54ACF0;
-    color:#54ACF0;
+
+.tab-second-container .tab-second-content.active {
+    position: relative;
+    color: #54ACF0;
+}
+
+.tab-second-container .tab-second-content.active::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: -1px;
+    top: -1px;
+    border: 1px #54ACF0 solid;
 }
