--- a/layui-2.0/css/public.css
+++ b/layui-2.0/css/public.css
@@ -56,6 +56,7 @@ body.small .layui-layout-admin .layui-footer {
 .layui-layout-admin .layui-body {
     top: 100px;
     background-color: #fff;
+    overflow: auto;
 }
 
 /* 左侧导航 */
