--- a/layui-2.0/css/component/breadcrumb.css
+++ b/layui-2.0/css/component/breadcrumb.css
@@ -7,8 +7,10 @@
     padding: 20px 12px;
     line-height: 0;
     background-color: #fff;
-    position: relative;
-    top: -50px;
+    position: fixed;
+    top: 50px;
+    right: 0;
+    left: 200px;
 }
 
 .layui-breadcrumb>* {
