--- a/layui-2.0/css/public.css
+++ b/layui-2.0/css/public.css
@@ -42,6 +42,9 @@ iframe {
 .layui-body {
     overflow: visible;
 }
+.layui-side-scroll {
+    width: 200px;
+}
 
 body.large .layui-body,
 body.large .layui-layout-admin .layui-footer {
@@ -51,6 +54,9 @@ body.large .layui-layout-admin .layui-footer {
 body.small .layui-body,
 body.small .layui-layout-admin .layui-footer {
     left: 70px;
+}
+body.small .breadcrumb-container {
+    left: 60px;
 }
 
 .layui-layout-admin .layui-body {
@@ -138,9 +144,9 @@ body.small .layui-side.small {
     padding: 8px;
     border-radius: 4px;
     background-color: transparent;
-	box-shadow: none;
-	min-width: 140px;
-	text-align: center;
+    box-shadow: none;
+    min-width: 140px;
+    text-align: center;
 }
 
 .layui-side.small .layui-nav-child::after {
@@ -157,9 +163,9 @@ body.small .layui-side.small {
 }
 
 .layui-side.small .layui-nav-child dd {
-	background-color: #262A35;
-	height: 45px;
-	line-height: 45px;
+    background-color: #262A35;
+    height: 45px;
+    line-height: 45px;
 }
 
 .layui-side.small .layui-nav .layui-nav-child a {
@@ -266,6 +272,58 @@ body.large .layui-side.large {
 
 .main-color {
     color: #f05654;
+}
+
+.sub1-color {
+    color: #54ACF0;
+}
+
+.sub2-color {
+    color: #262A35;
+}
+
+.sub3-color {
+    color: #EEF7FD;
+}
+
+.decor1-color {
+    color: #F0B354;
+}
+
+.decor2-color {
+    color: #54F075;
+}
+
+.txt1-color {
+    color: #333333;
+}
+
+.txt2-color {
+    color: #666666;
+}
+
+.txt3-color {
+    color: #999999;
+}
+
+.disable-color {
+    color: #cccccc;
+}
+
+.table-br-color {
+    color: #E3E3E3;
+}
+
+.table-head-color {
+    color: #F0F0F0;
+}
+
+.background-color {
+    color: #efefef;
+}
+
+.block-color {
+    color: #fff;
 }
 
 /* 字体图标 */
