--- a/layui-2.0/css/component/pic.css
+++ b/layui-2.0/css/component/pic.css
@@ -6,17 +6,21 @@
 
 @charset "utf-8";
 
-#pic .pictureImg{
-    display: block;
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 0;
-    position: relative;
-    background-position: 50%;
-    background-repeat: no-repeat;
-    background-size: contain;
-    padding-bottom: 100%;
-    background-color: #EFEFEF;
+.pic-one{
+    width: 120px;
+    height: 120px;
+    display: inline-block;
+}
+.pic-two{
+    width: 64px;
+    height: 64px;
+    display: inline-block;
+}
+.pic-one img{
+    width: 120px;
+    height: 120px;
+}
+.pic-two img{
+    width: 64px;
+    height: 64px;
 }
