--- a/layui-2.0/css/public.css
+++ b/layui-2.0/css/public.css
@@ -16,7 +16,16 @@
 @import url('component/search.css');
 /* 面包屑 */
 @import url('component/breadcrumb.css');
-
+/* 复选框 */
+@import url('component/checkbox.css');
+/* 标签 */
+@import url('component/lable.css');
+/* 图片比例 */
+@import url('component/pic.css');
+/* 法规提示 */
+@import url('component/rule.css');
+/* 数据表格 */
+@import url('component/table.css');
 /*
  * 标签重定义
  */
