--- a/layui-2.0/css/component/layout.css
+++ b/layui-2.0/css/component/layout.css
@@ -6,3 +6,40 @@
 
 @charset "utf-8";
 
+/* 布局 */
+.layui-form .layui-input-block {
+    margin-left: 140px;
+}
+
+.layui-form .layui-form-label {
+    width: 140px;
+    font-size: 14px;
+    color: #333333;
+    padding: 9px 5px !important;
+    box-sizing: border-box;
+}
+
+.layui-form .tip {
+    color: #F05654;
+}
+
+.layui-form .desc {
+    font-size: 13px;
+    color: #999;
+    margin-top: 5px;
+    height: 19.5px;
+}
+
+.layui-form .msg {
+    font-size: 12px;
+    color: #F05654;
+    margin-top: 5px;
+    height: 18px;
+}
+
+.layui-form .form-title {
+    padding: 20px 0;
+    font-size: 14px;
+    color: #333;
+    line-height: 1;
+}
