--- a/layui-2.0/css/public.css
+++ b/layui-2.0/css/public.css
@@ -6,6 +6,8 @@
 
 @charset "utf-8";
 
+/* 布局 */
+@import url('component/layout.css');
 /* 按钮 */
 @import url('component/button.css');
 /* 选项卡 */
@@ -29,6 +31,7 @@
 
 html {
     background-color: rgb(237, 237, 237);
+    line-height: 1.5;
 }
 
 iframe {
