--- a/layui-2.0/css/component/daifashangpinxiangqin.css
+++ b/layui-2.0/css/component/daifashangpinxiangqin.css
@@ -1,93 +1,6 @@
-/* .width-928 {
-    width: 928px;
+.contentBox{
+min-width: 1100px;
 }
-
-.mlfet-13 {
-    margin-left: 13px;
-}
-
-.al-items-center {
-    display: flex;
-    align-items: center;
-}
-
-.layui-body .contentBox {
-    min-width: 1356px;
-}
-
-.layui-body {
-    clear: both;
-}
-
-.layui-tab-content .rule {
-    margin-bottom: 0px;
-}
-
-.layui-tab-content .layui-form {
-    padding-left: 10px;
-}
-
-.layui-tab-content .layui-form .layui-input {
-    width: 928px;
-    color: #999999;
-}
-
-.layui-tab-content .input-second-container .input-number {
-    top: 21%;
-    right: 0px;
-    left: 880px;
-}
-
-.layui-tab-content .float-left .input-number {
-    top: 50%;
-    left: 220px;
-}
-
-.layui-tab-content .input-second-container .book-information {
-    display: flex;
-    align-items: center;
-}
-
-.input-second-container .book-information .synchronization {
-    font-size: 12px;
-    color: #54ACF0;
-    padding-left: 8px;
-}
-
-.layui-tab-content .layui-form .input-one1-container .layui-input,
-.layui-tab-content .layui-form .float-left .layui-input {
-    width: 260px;
-}
-
-.layui-tab-content .layui-form .width-31 {
-    width: 31%;
-}
-
-.layui-item .layui-select-title .rests {
-    width: 130px;
-    margin-left: 12px;
-    padding-right: 0px;
-}
-
-
-.desc {
-    clear: both;
-}
-
-.input-second-container .layui-form-select .layui-select-title {
-    width: 928px;
-    position: relative;
-}
-
-.layui-body .bottom-layui-btn {
-    left: 200px;
-}
-
-.lable-input-container .layui-form-selected dl {
-    min-width: 928px;
-    width: 928px;
-} */
-
 .padd-top{
     padding-top: 10px;
 }
