--- a/layui-2.0/css/component/search.css
+++ b/layui-2.0/css/component/search.css
@@ -10,9 +10,11 @@
     background-color: #FFF;
     /* overflow: hidden; */
 }
-.high-search-container{
+
+.high-search-container {
     background-color: #FFF;
 }
+
 .high-search-container .high-search-left {
     float: left;
 }
@@ -25,13 +27,20 @@
     display: none;
 }
 
-.high-search-container .high-search-fold .high-search-result-btn {
-    margin-left: 10px;
+.high-search-container .high-search-fold .high-search-result-btn,
+.high-search-container .high-search-fold .tab-search-input,
+.high-search-container .high-search-fold .layui-btn {
+    margin-left: 20px;
 }
 
-.high-search-container .high-search-open .high-search-input,
+
+.high-search-container .high-search-open .high-search-input .display-inline,
 .high-search-container .high-search-open .high-search-catalog,
 .high-search-container .high-search-open .high-search-from,
 .high-search-container .high-search-open .high-search-bottom {
     margin-top: 15px;
+}
+
+.high-search-container .high-search-open .high-search-input .display-inline,.high-search-container .high-search-open .high-search-from .layui-btn,.high-search-container .high-search-open .high-search-bottom .layui-btn {
+    margin-right: 20px;
 }
