--- a/layui-2.0/css/component/popup.css
+++ b/layui-2.0/css/component/popup.css
@@ -253,6 +253,10 @@
     border-radius: 4px;
 }
 
+.padd-top {
+    padding-top: 10px;
+}
+
 .alert .layui-layer-btn0 {
     border: none !important;
     background-color: #54ACF0 !important;
