--- a/layui-2.0/css/public.css
+++ b/layui-2.0/css/public.css
@@ -34,6 +34,8 @@
 @import url('component/popup.css');
 /* 日期选择 */
 @import url('component/date.css');
+/* 徽章 */
+@import url('component/badge.css');
 
 /*
  * 标签重定义
@@ -401,4 +403,41 @@ body.large .layui-side.large {
 
 .layui-btn+.layui-btn {
     margin-left: 0;
+}
+
+
+/* 隐藏滚动条 */
+::-webkit-scrollbar {
+	width: 0px;
+	height: 10px;
+}
+
+::-ms-scrollbar {
+	width: 0px;
+	height: 0;
+}
+
+::scrollbar[orient="vertical"] {
+	min-width: 0px !important;
+}
+
+/* 滚动条的滑轨背景颜色 */
+::-webkit-scrollbar-track {
+	background-color: rgba(0, 0, 0, .05);
+}
+
+/* 滑块颜色 */
+::-webkit-scrollbar-thumb {
+	background-color: rgba(0, 0, 0, .15);
+}
+
+/* 滑轨两头的监听按钮颜色 */
+::-webkit-scrollbar-button {
+	height: 0;
+	background-color: rgba(0, 0, 0, .05);
+}
+
+/* 横向滚动条和纵向滚动条相交处尖角的颜色 */
+::-webkit-scrollbar-corner {
+	background-color: black;
 }
