--- a/layui-2.0/css/component/layout.css
+++ b/layui-2.0/css/component/layout.css
@@ -36,6 +36,9 @@
     margin-top: 5px;
     height: 18px;
 }
+.layui-form .text {
+    padding: 9px 0;
+}
 
 .layui-form .form-title {
     padding: 20px 0;
@@ -66,6 +69,7 @@
 .layui-form-item .layui-inline {
     margin-right: 5px;
 }
+/* 表格布局 */
 .table-one {
     background-color: #F5F5F5;
     border: 1px #E3E3E3 solid;
