--- a/layui-2.0/css/component/lable.css
+++ b/layui-2.0/css/component/lable.css
@@ -1,7 +1,7 @@
 /*
- *	作者: zby
- *	创建时间：
- *	描述：标签组件
+ *  作者: zby
+ *  创建时间：
+ *  描述：标签组件
  */
 @charset "utf-8";
 
@@ -45,6 +45,15 @@
 .lableGroup .lable-btn.active {
     background: #54ACF0 !important;
     color: #ffffff !important;
+}
+.lableGroup .noLable{
+    font-size: 14px;
+    color: #999999;
+    margin-left: 100px;
+    margin-bottom: 15px;
+}
+.lableGroup .clickLableAdd{
+    margin-left: 65px;
 }
 
 .lableAdd {
