--- a/layui-2.0/css/component/select.css
+++ b/layui-2.0/css/component/select.css
@@ -24,3 +24,7 @@
     border-radius:4px;
     border:1px solid #C0C0C0;
 }
+.layui-form-select dl dd.layui-this {
+    background-color: #EEF7FD;
+    color: #54ACF0;
+}
